---
source: crates/ruff/src/rules/pyflakes/mod.rs
---
<filename>:2:8: F401 [*] `os` imported but unused
  |
2 | import os
  |        ^^ F401
3 | 
4 | def f():
  |
  = help: Remove unused import: `os`

ℹ Fix
1 1 | 
2   |-import os
3 2 | 
4 3 | def f():
5 4 |     os = 1

<filename>:12:9: F811 Redefinition of unused `os` from line 2
   |
10 |     def g():
11 |         # `import os` should still be flagged as shadowing an import.
12 |         os = 1
   |         ^^ F811
13 |         print(os)
   |


